# brazil-race-classifier

./: README.md  pyproject.toml
configs/: cleaning_schema.yaml  project.yaml  tse_urls.yaml
configs/cleaning/: tse_photo_naming.yaml
configs/prompts/: augment_ballot_names.yaml  classify_names.yaml
configs/tse/: tse_urls.yaml
data/isa/: isa_groups.parquet
src/brazil_race_classifier/: __init__.py  cli.py
src/brazil_race_classifier/data/: clean_data.py  indigenous_names.py  upload_candidates_raw.py  upload_isa_groups.py  upload_photos.py
src/brazil_race_classifier/names/: train.py
