[project]
name = "brazil-race-classifier"
version = "0.1.0"
description = "Multi-modal machine learning pipeline (names + images) to identify self-declared Indigenous Brazilian politicians (2004–2024), built as auxiliary code for “Conservation Through Representation: Indigenous Politicians and Forest Protection in the Brazilian Amazon”."
authors = [
    {name = "Gabriel S. Gaspar"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "numpy (<2.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "google-cloud-storage (>=3.3.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[project.scripts]
brc = "brazil_race_classifier.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
